# Crucible-cruhon

./: .gitignore  CHANGELOG.md  README.md  library.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
bodymap/: README.md  _mp_connections.py  download_models.sh  requirements.txt  server.py  test_suite.py
bodymap/static/: index.html
cruhon/: __init__.py  cli.py
cruhon/core/: ast_nodes.py  cache.py  dependency_resolver.py  installer.py  lexer.py  mod_loader.py  parser.py  registry.py  runner.py  syntax_engine.py  transpiler.py
cruhon/tests/: conftest.py  test_auto_import_gaps.py  test_cache.py  test_cli.py  test_core.py  test_crypto_log_config.py  test_data.py  test_db_env_migrate.py  test_db_panel_bridge.py  test_discord.py  test_docs_match_registry.py  test_dotted_block_commands.py  test_expanded_methods4.py  test_file_date.py  test_file_mgmt_utils.py  test_file_path.py  test_gap_fill.py  test_handlers_compile.py  test_installer.py  test_language_v25.py  test_math_extended.py  test_panel.py  test_previously_untested_namespaces.py  test_shell_archive_mail.py  test_shell_safe_exec.py  test_shortcuts_store_bug.py  test_store_color_extra.py  test_text_http_csv.py
livechat/: config.yml  requirements.txt
livechat/app/: config.py
lsp/cruhon_lsp/: completions.py  diagnostics.py  server.py
mods/cruhon-data/: __init__.py
mods/cruhon-db/: __init__.py
mods/cruhon-discord/: API_INVENTORY.md  DISCORD_PLAN.md  README.md  __init__.py  mod.json
mods/cruhon-panel/: __init__.py  mod.json
mods/cruhon-shortcuts/: __init__.py  mod.json  shortcuts_binary.py  shortcuts_config.py  shortcuts_data.py
mods/cruhon-shortcuts-data/: __init__.py  data_config.py  data_format.py  data_regex.py  mod.json
mods/cruhon-shortcuts-pro/: __init__.py  pro_config.py
spec/: architecture.md  grammar.md  version.json
support-tawk/: .gitignore  KURULUM.md  README.md  config.yml  install.sh  migrate_encrypt.py  requirements.txt
support-tawk/server/: ai_handler.py  auth.py  bot_matcher.py  (+9 more)
(+78 files in other folders)
